@@ -9,9 +9,9 @@ AC_CONFIG_HEADER(common/config.h)
 AC_PREFIX_DEFAULT(/usr/local/nagios)
 
 PKG_NAME=nrpe
-PKG_VERSION="2.0b3"
+PKG_VERSION="2.0b4"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="04-17-2003"
+PKG_REL_DATE="06-04-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 
