@@ -1,5 +1,5 @@
 %define name nrpe
-%define version 2.0b3
+%define version 2.0b4
 %define release 1
 %define nsusr nagios
 %define nsgrp nagios
