@@ -4,12 +4,12 @@
 DH *get_dh512()
 	{
 	static unsigned char dh512_p[]={
-		0xA8,0x3A,0x30,0xC2,0x7A,0xF8,0xEB,0xC5,0x01,0x11,0xB8,0x51,
-		0xBE,0x1A,0x6C,0x0D,0x62,0x0D,0xD5,0xED,0x7D,0x35,0x33,0xE9,
-		0xB7,0xB6,0x7C,0x14,0x3F,0x6B,0x1E,0xE5,0x73,0xB8,0x09,0x6C,
-		0xB2,0x06,0x7B,0x09,0x50,0xD5,0xCE,0xA2,0xFC,0x03,0x8D,0xD3,
-		0xDB,0x3F,0x2E,0x5B,0x98,0x49,0x25,0xDC,0x45,0x9B,0x92,0x84,
-		0x5F,0xAE,0x37,0x3B,
+		0xF1,0x28,0x95,0x15,0x27,0xE4,0x53,0x83,0x57,0xFD,0x65,0xB2,
+		0x18,0x7D,0x90,0x68,0xCA,0x00,0xF8,0x43,0x02,0x3D,0x44,0xCB,
+		0xD0,0x81,0x6D,0x47,0x3D,0x70,0x5C,0xCF,0x19,0xF0,0x26,0x05,
+		0x41,0xFD,0x59,0x13,0xC3,0x47,0x90,0xFC,0x38,0xC4,0xA8,0xE4,
+		0x63,0x65,0x6E,0x10,0x3F,0xE2,0x9A,0xAB,0x8B,0x73,0x83,0xF6,
+		0x84,0x87,0xF7,0x83,
 		};
 	static unsigned char dh512_g[]={
 		0x02,
