@@ -13,6 +13,7 @@ NRPE Changelog
 - Added 'include_dir' variable to allow inclusion of external
   config files in directories (with recursion)
 - Added native SSL support (Derrick Bennett)
+- Added my_strsep(), as Solaris doesn't have strsep()
 
 
 1.8 - 01/16/2003
